resources/echo-test.yaml
###############################################################################
# DEPLOYMENTS #################################################################
###############################################################################
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}          


###############################################################################
# SERVICES ####################################################################
###############################################################################
---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo


###############################################################################
# SECRETS #####################################################################
###############################################################################
---
# Route /echo
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-ratelimit
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-ratelimit
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'rate-limit-2rpm'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-ratelimit
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-keyauth
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-keyauth
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'key-auth-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-keyauth
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-basicauth
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-basicauth
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'basic-auth-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-basicauth
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-jwtauth
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-jwtauth
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'jwt-auth-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-jwtauth
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-acl-admin
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-acl-admin
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'jwt-auth-example, admin-acl-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-acl/admin
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-acl/anyone
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-acl-anyone
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'jwt-auth-example, anyone-acl-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-acl/anyone
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-loadtest
# test URL: http://localhost/echo-loadtest?load_test=true&load_loops=1000000000
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-loadtest
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'loadtest-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-loadtest
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-jwtchecker
# test: curl -s -i "http://localhost/echo-jwtchecker"
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-jwtchecker
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'jwtchecker-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-jwtchecker
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-acl-jwt-custom
# test: curl -s -i "http://localhost/echo-acl-jwt-custom/customer"
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-acl-jwt-custom
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'acl-jwt-custom-example'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-acl-jwt-custom
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
---
# Route /echo-acl-jwt-custom-rate-limit
# test: curl -s -i "http://localhost/echo-jwtchecker-rate-limit"
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-acl-jwt-custom-rate-limit
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: 'acl-jwt-custom-example,rate-limit-2rpm'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-acl-jwt-custom-rate-limit
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
